Adds pointer cursor on Demo/GitHub buttons.  Changed title to Software Developer.  Removed inverted hover on skills icons

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
                     <div class="text-component">
                         <h1 id='feature-name'>Jonathan Joe</h1>
-                        <p id='feature-text'>Full Stack Software Developer</p>
+                        <p id='feature-text'>Software Developer</p>
                         <p id='regular-text'>I'm a software developer with a bachelor's degree in biomedical
                             engineering. I have an insatiable thirst for knowledge and a strong desire to create
                             innovative products. While attending university, I discovered that my passion for
@@ -112,7 +112,8 @@
                     <img src="/images/homecookd.jpeg" alt="homecookd" class="project-image">
                     <div class="project-hover">
                         <div class="project-desc">
-                            <p class="project-text">App providing the infrastructure for community driven food related events.
+                            <p class="project-text">App providing the infrastructure for community driven food related
+                                events.
                             </p>
                         </div>
                         <div class="project-links">
@@ -131,30 +132,30 @@
                 </div>
                 <br />
                 <div class="project-skills-container">
-                        <div class="project-skill-card">
-                                <i class="devicon-javascript-plain  project-skill-icon"></i>
-                            </div>
-                            <div class="project-skill-card">
-                                <i class="devicon-react-original-wordmark project-skill-icon"></i>
-                            </div>
-                            <div class="project-skill-card">
-                                <i class="project-skill-icon2">Redux</i>
-                            </div>
-                            <div class="project-skill-card">
-                                <i class="devicon-express-original-wordmark  project-skill-icon"></i>
-                            </div>
-                            <div class="project-skill-card">
-                                <i class="devicon-mysql-plain-wordmark project-skill-icon"></i>
-                            </div>
-                            <div class="project-skill-card">
-                                <i class="project-skill-icon2">Materialize</i>
-                            </div>
-                            <div class="project-skill-card">
-                                <i class="devicon-css3-plain-wordmark  project-skill-icon"></i>
-                            </div>
-                            <div class="project-skill-card">
-                                <i class="devicon-html5-plain-wordmark  project-skill-icon"></i>
-                            </div>
+                    <div class="project-skill-card">
+                        <i class="devicon-javascript-plain  project-skill-icon"></i>
+                    </div>
+                    <div class="project-skill-card">
+                        <i class="devicon-react-original-wordmark project-skill-icon"></i>
+                    </div>
+                    <div class="project-skill-card">
+                        <i class="project-skill-icon2">Redux</i>
+                    </div>
+                    <div class="project-skill-card">
+                        <i class="devicon-express-original-wordmark  project-skill-icon"></i>
+                    </div>
+                    <div class="project-skill-card">
+                        <i class="devicon-mysql-plain-wordmark project-skill-icon"></i>
+                    </div>
+                    <div class="project-skill-card">
+                        <i class="project-skill-icon2">Materialize</i>
+                    </div>
+                    <div class="project-skill-card">
+                        <i class="devicon-css3-plain-wordmark  project-skill-icon"></i>
+                    </div>
+                    <div class="project-skill-card">
+                        <i class="devicon-html5-plain-wordmark  project-skill-icon"></i>
+                    </div>
                 </div>
             </div>
 
