Adds entry for dreamlogger

--- a/index.html
+++ b/index.html
@@ -160,6 +160,34 @@
             </div>
 
             <div class="project-container">
+                <h1 class="project-header">Dreamlogger</h1>
+                <div class="project-middle">
+                    <img src="/images/homecookd.jpeg" alt="dreamlogger" class="project-image">
+                    <div class="project-hover">
+                        <div class="project-desc">
+                            <p class="project-text">
+                                Dreamlogger is an app designed to help log and organize your nightly adventures.
+                            </p>
+                        </div>
+                        <div class="project-links">
+                            <a target='_blank' href="https://dream.jonathanjoe.xyz/">
+                                <button class="project-button">
+                                    Live Demo
+                                </button>
+                            </a>
+                            <a target='_blank' href="https://github.com/JonathanDonJoe/dreamlogger">
+                                <button class="project-button">
+                                    GitHub
+                                </button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            
+
+            <div class="project-container">
                 <h1 class="project-header">Senpai Search</h1>
                 <div class="project-middle">
                     <img src="/images/senpaiSearch.jpeg" alt="Avatar" class="project-image">
