Adds icons to dreamlogger project

--- a/index.html
+++ b/index.html
@@ -183,6 +183,27 @@
                         </div>
                     </div>
                 </div>
+                <br />
+                <div class="project-skills-container">
+                    <div class="project-skill-card">
+                        <i class="devicon-javascript-plain  project-skill-icon"></i>
+                    </div>
+                    <div class="project-skill-card">
+                        <i class="devicon-react-original-wordmark project-skill-icon"></i>
+                    </div>
+                    <div class="project-skill-card">
+                        <i class="project-skill-icon2">Redux</i>
+                    </div>
+                    <div class="project-skill-card">
+                        <i class="project-skill-icon2">Materialize</i>
+                    </div>
+                    <div class="project-skill-card">
+                        <i class="devicon-css3-plain-wordmark  project-skill-icon"></i>
+                    </div>
+                    <div class="project-skill-card">
+                        <i class="devicon-html5-plain-wordmark  project-skill-icon"></i>
+                    </div>
+                </div>
             </div>
 
             
