Adds dreamlogger project image

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <div class="project-container">
                 <h1 class="project-header">Dreamlogger</h1>
                 <div class="project-middle">
-                    <img src="/images/homecookd.jpeg" alt="dreamlogger" class="project-image">
+                    <img src="/images/dreamLogger.png" alt="dreamlogger" class="project-image">
                     <div class="project-hover">
                         <div class="project-desc">
                             <p class="project-text">
