--- a/index.html
+++ b/index.html
@@ -147,6 +147,9 @@
                     <div class="project-skill-card">
                         <i class="devicon-mysql-plain-wordmark project-skill-icon"></i>
                     </div>
+                    <div class="proejct-skill-card">
+                        <i class="devicon-nodejs-plain-wordmark skill-icon"></i>
+                    </div>
                     <div class="project-skill-card">
                         <i class="project-skill-icon2">Materialize</i>
                     </div>
@@ -193,6 +196,9 @@
                     </div>
                     <div class="project-skill-card">
                         <i class="project-skill-icon2">Redux</i>
+                    </div>
+                    <div class="proejct-skill-card">
+                        <i class="devicon-nodejs-plain-wordmark skill-icon"></i>
                     </div>
                     <div class="project-skill-card">
                         <i class="project-skill-icon2">Materialize</i>
@@ -276,19 +282,23 @@
                         <i class="devicon-javascript-plain  project-skill-icon"></i>
                     </div>
                     <div class="project-skill-card">
-                        <i class="devicon-css3-plain-wordmark  project-skill-icon"></i>
-                    </div>
-                    <div class="project-skill-card">
-                        <i class="devicon-html5-plain-wordmark  project-skill-icon"></i>
-                    </div>
-                    <div class="project-skill-card">
                         <i class="devicon-express-original-wordmark  project-skill-icon"></i>
+                    </div>
+                    <div class="proejct-skill-card">
+                        <i class="devicon-nodejs-plain-wordmark skill-icon"></i>
                     </div>
                     <div class="project-skill-card">
                         <i class="devicon-bootstrap-plain-wordmark  project-skill-icon"></i>
                     </div>
                     <div class="project-skill-card">
                         <i class="devicon-postgresql-plain-wordmark  project-skill-icon"></i>
+                    </div>
+
+                    <div class="project-skill-card">
+                        <i class="devicon-css3-plain-wordmark  project-skill-icon"></i>
+                    </div>
+                    <div class="project-skill-card">
+                        <i class="devicon-html5-plain-wordmark  project-skill-icon"></i>
                     </div>
                 </div>
             </div>
